--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-seo",
+  "name": "lithograph",
   "version": "0.0.1",
   "authors": [
     "Josh Carroll <jwarren.carroll@gmail.com>"
